src/test/kalang-snippets/error/UnreachableCheck.kls
unreachable statement@7
String test(boolean c) {
    if (c) {
        return "true";
    } else {
        return "false";
    }
    return "null";
}